force-app/main/default/objects/Data_Cloud_Config__mdt/Data_Cloud_Config__mdt.object-meta.xml
<CustomObject>
    <description>Data Cloud Ingestion API configuration for CSV upload LWC.</description>
    <label>Data Cloud Config</label>
    <pluralLabel>Data Cloud Configs</pluralLabel>
</CustomObject>