force-app/main/default/objects/Data_Cloud_Config__mdt/fields/Connector__c.field-meta.xml
<CustomField>
    <fullName>Connector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if the value is a data source</description>
    <inlineHelpText>Check this if the value is a data source</inlineHelpText>
    <label>Connector</label>
    <type>Checkbox</type>
</CustomField>