force-app/main/default/objects/Data_Cloud_Config__mdt/fields/JWT_Value__c.field-meta.xml
<CustomField>
    <fullName>JWT_Value__c</fullName>
    <label>JWT Value</label>
    <type>TextArea</type>
</CustomField>