force-app/main/default/objects/Data_Cloud_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object API Name of Connector.</description>
    <inlineHelpText>Object API Name of Connector.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>