force-app/main/default/objects/Data_Cloud_Config__mdt/fields/Source_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_API_Name__c</fullName>
    <description>Source API Name of Connector.</description>
    <inlineHelpText>Source API Name of Connector.</inlineHelpText>
    <label>Source API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>